[package]
name = "opensilk-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "json", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
thiserror = "2"
fred = { version = "10", features = ["i-keys", "i-streams", "enable-rustls"], default-features = false }
rmcp = { version = "1.4", default-features = false, features = ["server"] }
schemars = "1.2"
